# TheCherno-OpenGL-Series

./: CMakeLists.txt
Libraries/glad/: CMakeLists.txt
Libraries/include/glad/: glad.h
Libraries/lib/glad/: CMakeLists.txt  glad.c
Source/: Application.cpp  CMakeLists.txt
